--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Please enter your contact details below.</p>
     <form method="POST" action="/form" novalidate="novalidate">
       <div class="row">
-        <div class="form-group col-md-3">
+        <div class="form-group col-sm-3">
           <label for="Salutation">Salutation</label>
           <select id="Salutation" class="form-control" name="gender" required="" aria-required="true">
             <option value="-1">Choose</option>
@@ -20,7 +20,7 @@
             <option value="1">Mrs.</option>
           </select>
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-sm-3">
           <label for="Title">Title</label>
           <select id="Title" name="title" class="form-control">
             <option value="" selected="selected">Choose</option>
@@ -35,90 +35,90 @@
         </div>
       </div>
       <div class="row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="FirstName">First Name</label>
           <input id="FirstName" class="form-control" name="firstName" type="text" placeholder="First Name *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="LastName">Last Name</label>
           <input id="LastName" class="form-control" name="lastName" type="text" placeholder="Last Name *" required="" aria-required="true">
         </div>
       </div>
       <div class="row">
-        <div class="form-group col-md-12">
+        <div class="form-group col-sm-12">
           <label for="CompanyName">Company Name</label>
           <input id="CompanyName"class="form-control" name="organization" type="text" placeholder="Company Name *" required="" aria-required="true">
         </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Position">Position</label>
           <input id="Position" class="form-control" name="position" type="text" placeholder="Position *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="CompanyWebsite">Company Website</label>
           <input id="CompanyWebsite" class="form-control" name="website" type="url" placeholder="Company Website *" required="" aria-required="true">
         </div>
       </div>
       <div class="row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Phone">Phone</label>
           <input id="Phone" class="form-control" name="phone" type="tel" placeholder="Phone *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Fax">Fax</label>
           <input id="Fax" class="form-control" name="fax" type="tel" placeholder="Fax *" required="" aria-required="true">
         </div>
       </div>
       <div class="row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Mobile">Mobile</label>
           <input id="Mobile" class="form-control" name="mobile" type="tel" placeholder="Mobile *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="EmailAddress">Email address</label>
           <input id="EmailAddress" class="form-control" name="email" type="email" placeholder="Email *" required="" aria-required="true">
         </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="form-group col-md-12">
+        <div class="form-group col-sm-12">
           <label for="Street">Street</label>
           <input id="Street" class="form-control" name="street" type="text" placeholder="Street *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="ZIP">ZIP</label>
           <input id="ZIP" class="form-control" name="zip" type="text" placeholder="ZIP *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="City">City</label>
           <input id="City" class="form-control" name="city" type="text" placeholder="City *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Country">Country</label>
           <input id="Country" class="form-control" name="country" type="text" placeholder="Country *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="State">State</label>
           <input id="State" class="form-control" name="state" type="text" placeholder="State *" required="" aria-required="true">
         </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="LinkedIn">LinkedIn Profile</label>
           <input id="LinkedIn" class="form-control" name="linkedin" type="url" placeholder="LinkedIn Profile *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Xing">Xing Profile</label>
           <input id="Xing" class="form-control" name="xing" type="url" placeholder="Xing Profile *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Facebook">Facebook Profile</label>
           <input id="Facebook" class="form-control" name="facebook" type="url" placeholder="Facebook Profile *" required="" aria-required="true">
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-sm-6">
           <label for="Twitter">Twitter Profil</label>
           <input id="Twitter" class="form-control" name="twitter" type="url" placeholder="Twitter Profile *" required="" aria-required="true">
         </div>
@@ -126,7 +126,7 @@
 
       <hr/>
       <div class="row">
-        <div class="form-group col-md-12">
+        <div class="form-group col-sm-12">
           <label for="Note">Note</label>
           <textarea id="Note" class="form-control" name="note" type="textarea" placeholder="Note" required="" aria-required="true"></textarea>
         </div>
