Replace bootstrap embed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>snapADDY REST API Demo Application</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="http://www.snapaddy.com/assets/css/main.min.7404.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
