--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <div class="col-xs-offset-3 col-xs-6" style="margin-top: 50px; border: 1px solid #ddd; padding: 25px; border-radius: 12px;">
     <h1 style="margin-top: 0;">Demo Form</h1>
+  <div class="card">
     <p>Please enter your contact details below.</p>
     <form method="POST" action="/form" novalidate="novalidate">
       <div class="row">
