--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1 style="margin-top: 0;">Demo Form</h1>
   <div class="card">
+    <h1>Demo Form</h1>
     <p>Please enter your contact details below.</p>
     <form method="POST" action="/form" novalidate="novalidate">
       <div class="row">
