--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
 <body>
   <div class="card">
-    <h1>Demo Form</h1>
-    <p>Please enter your contact details below.</p>
+    <div class="margin-bottom">
+      <h1>Demo Form</h1>
+      <p class="margin-bottom">Please enter your contact details below.</p>
+      <hr>
+    </div>
     <form method="POST" action="/form" novalidate="novalidate">
       <div class="row">
         <div class="form-group col-sm-3">
