--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </select>
         </div>
       </div>
-      <div class="row">
+      <div class="row margin-bottom">
         <div class="form-group col-sm-6">
           <label for="FirstName">First Name</label>
           <input id="FirstName" class="form-control" name="firstName" type="text" placeholder="First Name *" required="" aria-required="true">
@@ -47,15 +47,12 @@
           <label for="LastName">Last Name</label>
           <input id="LastName" class="form-control" name="lastName" type="text" placeholder="Last Name *" required="" aria-required="true">
         </div>
-      </div>
-      <div class="row">
         <div class="form-group col-sm-12">
           <label for="CompanyName">Company Name</label>
           <input id="CompanyName"class="form-control" name="organization" type="text" placeholder="Company Name *" required="" aria-required="true">
         </div>
       </div>
-      <hr/>
-      <div class="row">
+      <div class="row margin-bottom">
         <div class="form-group col-sm-6">
           <label for="Position">Position</label>
           <input id="Position" class="form-control" name="position" type="text" placeholder="Position *" required="" aria-required="true">
@@ -64,8 +61,6 @@
           <label for="CompanyWebsite">Company Website</label>
           <input id="CompanyWebsite" class="form-control" name="website" type="url" placeholder="Company Website *" required="" aria-required="true">
         </div>
-      </div>
-      <div class="row">
         <div class="form-group col-sm-6">
           <label for="Phone">Phone</label>
           <input id="Phone" class="form-control" name="phone" type="tel" placeholder="Phone *" required="" aria-required="true">
@@ -74,8 +69,6 @@
           <label for="Fax">Fax</label>
           <input id="Fax" class="form-control" name="fax" type="tel" placeholder="Fax *" required="" aria-required="true">
         </div>
-      </div>
-      <div class="row">
         <div class="form-group col-sm-6">
           <label for="Mobile">Mobile</label>
           <input id="Mobile" class="form-control" name="mobile" type="tel" placeholder="Mobile *" required="" aria-required="true">
@@ -85,8 +78,7 @@
           <input id="EmailAddress" class="form-control" name="email" type="email" placeholder="Email *" required="" aria-required="true">
         </div>
       </div>
-      <hr/>
-      <div class="row">
+      <div class="row margin-bottom">
         <div class="form-group col-sm-12">
           <label for="Street">Street</label>
           <input id="Street" class="form-control" name="street" type="text" placeholder="Street *" required="" aria-required="true">
@@ -108,8 +100,7 @@
           <input id="State" class="form-control" name="state" type="text" placeholder="State *" required="" aria-required="true">
         </div>
       </div>
-      <hr/>
-      <div class="row">
+      <div class="row margin-bottom">
         <div class="form-group col-sm-6">
           <label for="LinkedIn">LinkedIn Profile</label>
           <input id="LinkedIn" class="form-control" name="linkedin" type="url" placeholder="LinkedIn Profile *" required="" aria-required="true">
@@ -128,15 +119,13 @@
         </div>
       </div>
 
-      <hr/>
-      <div class="row">
+      <div class="row margin-bottom">
         <div class="form-group col-sm-12">
           <label for="Note">Note</label>
           <textarea id="Note" class="form-control" name="note" type="textarea" placeholder="Note" required="" aria-required="true"></textarea>
         </div>
       </div>
 
-      <hr/>
       <button type="submit" class="btn btn-block btn-lg btn-primary" style="font-size: 1em;">Submit</button>
     </form>
   </div>
